# PitaEEGLSL

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  Dockerfile  LICENSE  Makefile  README.md  README_ja.md  SECURITY.md  coverage.lcov  lcov.info  pyproject.toml  run.py
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: build_and_test.yml  create_pr.yml  docs.yml  publish.yml  pythonpackage.yml  qlty-coverage-reporter.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst  pitaeeg.rst  pitaeegsensorapi4lsl.rst  pytemplate.rst
examples/: wireless_acquisition.py  wireless_analyze.py
libs/: .gitignore
pitaeeg/: __init__.py  exceptions.py  sensor.py  types.py
pitaeegsensorapi4lsl/: __init__.py  main.py  sensor.py  wireless_sample.py
pytemplate/: __init__.py  main.py
tests/: conftest.py  test_exceptions.py  test_main.py  test_sensor.py  test_types.py
